"ChangeLog"
#	$Id: ChangeLog,v 1.256 2011/05/03 19:20:32 fang Exp $

2013-01-16	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-52c:
	  config/cc.m4: conditionally define AC_C_TYPEOF, which was
		introduced in autoconf 2.60, to allow bootstraping with 2.59.


2012-12-05	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-52b:
	  config/hackt.m4: also search for tputs in libtinfo
		needed for some linux distros: Ubuntu, Fedora


2012-10-18	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-51:
	  configure.ac: date bump, .h files have been renamed .hh (C++)


2012-10-11	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-50:
	  Merged clangification branch to master!
	  Merged prsim-engine-rewrite branch to master!
	  configure.ac: date bump


2012-08-08	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-41f:
	  configure.ac: detect whether or not Makefiles were bootstrapped
		with automake version that produces .hh or .h from .yy(.cc).


2012-08-07	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-41e:
	  config/{hackt,guile}.m4, configure.ac: do NOT accumulate
		libraries to link in the LIBS var, that's just sloppy.
		Explicitly add them to the appropriate LIBADD and LDADD
		automake variables.


2011-11-23	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-99:
	  configure.ac: date-bump


2011-06-25	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-78:
	  repository moved over to git, copy .cvsignore to .gitignore.
	  updated bootstrap and scripts/maintainerclobber for git use
	  bootstrap now propagates ACLOCAL_FLAGS to libltdl's
		configure.ac and Makefile.am (assist in libtool2 migration)
	  Now pretty much require libtool 2.x (been around for years).
		Updated configure.ac to substitute new LT_* variables
		and pass them to Makefiles.

