@@ -1,6 +1,12 @@
 "ChangeLog"
 #	$Id: ChangeLog,v 1.256 2011/05/03 19:20:32 fang Exp $
 
+2013-11-15	David Fang	<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-86-53b:
+	  config/hackt.m4, configure.ac: check CONFIG_SHELL for pipefail
+
+
 2013-01-16	David Fang	<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-86-52c:
